@@ -539,6 +539,7 @@ pCriCen=P. Cri + Cen
 pMtra=P. Mtra (gr)
 porcCenBs=% Cen Bs
 porcCenBh=% Cen Bh
+porcCenizas=% Cenizas
 pcBtuLb=Pc. BTU/LB
 
 #Cto24H
@@ -586,9 +587,9 @@ Cto24H.csPCriCen=P. Cri + Cen
 Cto24H.csPorcCen=% Cenizas
 
 Cto24H_ip=INDICE DE PREPARACION
-Cto24H.ipBXOc=BX - Oc
-Cto24H.ipBXDig=BX-Digestor
-Cto24H.ipPorc=%
+Cto24HDetalle6.bxOc=BX - Oc
+Cto24HDetalle6.bxDig=BX-Digestor
+Cto24HDetalle6.porc=%
 
 Cto24H_av=ACIDEZ VOLATIL
 Cto24H.promMlTitu=Promedio
